embree: properly disable avx for GCC14

GCC 14 does not keep avx disabled just by undef'ing __AVX__ .
Add pragma option to do this properly.

Fixes: QTBUG-130381
Pick-to: 6.5
Change-Id: Ia2ae6edc50bfb24b83753fff184469c86daa88dc
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
Reviewed-by: Ville Voutilainen <ville.voutilainen@qt.io>
(cherry picked from commit b0d6afa7e822728e2e7d198efe7eef6f78a429e0)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>